--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     
     .form-group {
         flex: 1;
-        min-width: 120px;
+        /*min-width: 120px;*/
         max-width: 150px;
         display: flex;
         flex-direction: column;
