--- a/index.html
+++ b/index.html
@@ -218,9 +218,8 @@
     
     .form-group {
         flex: 1;
-        /*min-width: 120px;*/
-        /*max-width: 150px;*/
-        max-width: 100%;
+        min-width: 120px;
+        max-width: 150px;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -270,7 +269,7 @@
     }
 
     .input-group {
-        width: 100%;
+        width: 150px;
         display: flex;
         justify-content: center;
     }
