--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
     }
 
     .input-group {
-        width: 150px;
+        width: 100%;
         display: flex;
         justify-content: center;
     }
