--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     .form-group {
         flex: 1;
         min-width: 120px;
-        max-width: 150px;
+        max-width: 200px;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -227,7 +227,7 @@
     }
     
     #dynamicRateGroup {
-        width: 150px;
+        width: 200px;
         flex-direction: column;
         align-items: center;
         justify-content: flex-start;
@@ -269,9 +269,9 @@
     }
 
     .input-group {
-        width: 100%;
+        width: 200px;
         display: flex;
-        justify-content: center;
+        justify-content: flex-start;/*center;*/
     }
     
     .form-select {
