--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
         border-radius: 5px;
         -webkit-appearance: none;
         appearance: none;
-        width: 200px;
+        width: 100%;
         margin-left: auto;
         margin-right: auto;
         outline: none;
@@ -727,7 +727,7 @@
     }
 
     .variable-input-group .form-group {
-        width: 200px;
+        width: 150px;
         min-width: 0;
         max-width: none;
         flex: none;
@@ -736,8 +736,8 @@
     .variable-input-group .input-group {
         display: flex;
         align-items: center;
-        max-width: 200px;
-        width: 200px;
+        max-width: 150px;
+        width: 150px;
     }
     
     .variable-input-group .btn-danger,
