--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         --harmonogram-bg: #f9f9f9;
         --small-font-size: 0.7em;
         --border-radius: 5px;
+        --slider-thumb-color: #FFD700;
     }
     
     .dark-mode {
@@ -47,6 +48,7 @@
         --input-group-bg: #666666;
         --range-track: #666666;
         --harmonogram-bg: #404040;
+        --slider-thumb-color: #FFD700;
     }
     
     /* Reset i style bazowe */
@@ -337,7 +339,7 @@
     .variable-input-group .form-range::-moz-range-thumb,
     .form-range::-ms-thumb,
     .variable-input-group .form-range::-ms-thumb {
-        background: var(--accent-color);
+        background: var(--slider-thumb-color);
         border: none;
         border-radius: 50%;
         width: 6px;
