--- a/index.html
+++ b/index.html
@@ -305,8 +305,8 @@
         background: var(--range-track);
         border: none;
         border-radius: var(--border-radius);
-        -webkit-appearance: none;
-        appearance: none;
+        -webkit-appearance: none !important; 
+        appearance: none !important;
         width: 100%;
         margin-left: auto;
         margin-right: auto;
@@ -339,14 +339,14 @@
     .variable-input-group .form-range::-moz-range-thumb,
     .form-range::-ms-thumb,
     .variable-input-group .form-range::-ms-thumb {
-        background: var(--slider-thumb-color);
-        border: none;
-        border-radius: 50%;
-        width: 6px;
-        height: 6px;
-        cursor: pointer;
-        -webkit-appearance: none;
-        transform: translateY(-50%);
+        background: var(--slider-thumb-color) !important;
+        border: none !important;
+        border-radius: 50% !important;
+        width: 8px !important;
+        height: 8px !important;
+        cursor: pointer !important;
+        -webkit-appearance: none !important;
+        transform: translateY(-50%) !important;
     }
     
     .sub-info {
