--- a/index.html
+++ b/index.html
@@ -313,6 +313,15 @@
         outline: none;
         box-shadow: none;
     }
+
+    .form-range {
+    background: red; /* Sprawdź, czy tor suwaka zmienia kolor */
+    }
+    .form-range::-webkit-slider-thumb {
+        background: green;
+        width: 20px;
+        height: 20px;
+    }
     
     .form-range::-webkit-slider-runnable-track,
     .variable-input-group .form-range::-webkit-slider-runnable-track,
