--- a/index.html
+++ b/index.html
@@ -299,9 +299,7 @@
     .form-range {
         margin-top: 5px;
         height: 6px;
-        background: var(--input-group-bg);
-        border-left: 10px solid #000000;
-        border-right: 10px solid #000000;
+        background: #e5e5e5;
         border: none;
         border-radius: var(--border-radius);
         -webkit-appearance: none;
@@ -342,9 +340,7 @@
     }
 
     .dark-mode .form-range {
-        background: #555555;
-        border-left: 2px solid #333333; /* Ciemniejsza krawędź w trybie ciemnym */
-        border-right: 2px solid #333333;
+        background: #333333;
     }
     
     .dark-mode .form-range::-webkit-slider-thumb {
