--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
     .form-range {
         margin-top: 5px;
         height: 6px;
-        background: #e5e5e5;
+        background: #e5e5e5 !important;
         border: none;
         border-radius: var(--border-radius);
         -webkit-appearance: none;
@@ -340,7 +340,7 @@
     }
 
     .dark-mode .form-range {
-        background: #333333;
+        background: #333333 !important;
     }
     
     .dark-mode .form-range::-webkit-slider-thumb {
