--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
         margin-top: 5px;
         height: 6px;
         background: var(--input-group-bg) !important; /* Nowa zmienna z wymuszeniem */
-        border: 1px solid var(--border-color);
+        border: 2px solid var(--border-color);
         border-radius: var(--border-radius);
         -webkit-appearance: none;
         appearance: none;
@@ -331,7 +331,7 @@
         background: var(--input-group-bg) !important; /* Tor w Edge/IE */
         height: 6px;
         border-radius: var(--border-radius);
-        border: 1px solid var(--border-color);
+        border: 2px solid var(--input-group-bg);
         color: transparent; /* Ukrywa domyślny tor w IE */
     }
     
