--- a/index.html
+++ b/index.html
@@ -245,10 +245,12 @@
     }
     
     #dynamicRateGroup {
-        width: 150px;
+        width: 150px; 
+        min-width: 150px; 
         flex-direction: column;
-        align-items: center;
+        align-items: flex-start;
         justify-content: flex-start;
+        margin-right: 15px; 
     }
     
     .form-label,
