--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         max-width: 150px;
         display: flex;
         flex-direction: column;
-        align-items: flex-start;
+        align-items: center;
         justify-content: flex-start;
     }
     
