--- a/index.html
+++ b/index.html
@@ -385,6 +385,8 @@
         font-size: 0.4em;
         margin-top: 2px;
         text-align: left;
+        align-self: flex-start;
+        width: 100%;
     }
     
     /* Opisy i dane */
