--- a/index.html
+++ b/index.html
@@ -243,6 +243,10 @@
         align-items: center;
         justify-content: flex-start;
     }
+
+    #obligacjeForm .form-row:first-child {
+        margin-bottom: 25px;
+    }
     
     #dynamicRateGroup {
         width: 150px; 
