--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 
     #obligacjeForm .form-row:first-child .form-group:first-child .form-label {
         text-align: center;
-        display: flex;
+        display: center;
         justify-content: center;
         align-items: center;
         height: 100%;
@@ -309,12 +309,6 @@
     }
     .form-range:focus::-ms-track {
         background: var(--input-group-bg) !important;
-    }
-    
-    /* Opcjonalny cień dla fokusu */
-    .form-control:focus,
-    .form-select:focus {
-        box-shadow: 0 0 3px var(--accent-color);
     }
     
     .input-group-text {
