--- a/index.html
+++ b/index.html
@@ -302,6 +302,11 @@
     .form-range:focus::-ms-track {
         background: var(--input-group-bg) !important;
     }*/
+
+    .form-control:focus,
+    .form-select:focus {
+        box-shadow: 0 0 3px #000000; /* Subtelny efekt */
+    }
     
     .input-group-text {
         background: var(--input-group-bg);
