--- a/index.html
+++ b/index.html
@@ -289,8 +289,8 @@
     .form-select:focus,
     .form-range:focus {
         outline: none;
-        /*background: var(--input-bg);
-        color: var(--primary-text);*/
+        background: var(--input-bg);
+        /*color: var(--primary-text);*/
     }
     
     /*.form-range:focus::-webkit-slider-runnable-track {
