--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
     .form-range:focus {
         outline: none;
         background: var(--input-bg);
-        /*color: var(--primary-text);*/
+        color: var(--primary-text);
     }
     
     /*.form-range:focus::-webkit-slider-runnable-track {
