--- a/index.html
+++ b/index.html
@@ -256,6 +256,11 @@
         justify-content: flex-start;
         margin-right: 15px; 
     }
+
+    *:focus {
+        outline: none !important;
+        box-shadow: none !important;
+    }
     
     .form-label,
     .variable-input-group .form-label {
