--- a/index.html
+++ b/index.html
@@ -592,7 +592,8 @@
     }
     
     .chart-legend .color-box {
-        width: 150px;
+        width: 130px;
+        min-width: 130px;
         height: 26px;
         border-radius: var(--border-radius);
         text-align: center;
