--- a/index.html
+++ b/index.html
@@ -491,6 +491,16 @@
         line-height: 1.4;
         padding-left: 8em;
     }
+
+    .harmonogram td,
+    #harmonogramOpis {
+        color: var(--primary-text);
+    }
+    
+    .harmonogram td .star,
+    #harmonogramOpis .star {
+        color: var(--accent-gradient-start);
+    }
     
     .data-container {
         text-align: right;
