--- a/index.html
+++ b/index.html
@@ -1138,7 +1138,7 @@
     
         .harmonogram table {
             font-size: 0.55em;
-            max-width: 100%;
+            max-width: none;
             width: auto;
             min-width: 100%;
         }
