--- a/index.html
+++ b/index.html
@@ -1154,6 +1154,21 @@
             font-size: 0.55em;
             white-space: normal;
         }
+
+        .harmonogram-container {
+            width: 90vw; /* Rozciągamy na pełną szerokość viewportu */
+            max-width: none; /* Usuwamy ograniczenie szerokości */
+            margin-left: calc(-50vw + 50%); /* Centrujemy, przesuwając poza standardowy kontener */
+            margin-right: calc(-50vw + 50%);
+            padding: 10px 0; /* Zmniejszamy padding boczny, aby tło sięgało krawędzi */
+        }
+
+        .harmonogram-chart-wrapper {
+            width: 90vw; /* Rozciągamy na pełną szerokość viewportu */
+            margin-left: calc(-50vw + 50%);
+            margin-right: calc(-50vw + 50%);
+            padding: 15px 0; /* Zmniejszamy padding boczny */
+        }
     }
 </style>
 <div class="logo-container">
