--- a/index.html
+++ b/index.html
@@ -1156,18 +1156,18 @@
         }
 
         .harmonogram-container {
-            width: 90vw; /* Rozciągamy na pełną szerokość viewportu */
+            width: 90%; /* Rozciągamy na pełną szerokość viewportu */
             max-width: none; /* Usuwamy ograniczenie szerokości */
-            margin-left: calc(-50vw + 50%); /* Centrujemy, przesuwając poza standardowy kontener */
-            margin-right: calc(-50vw + 50%);
-            padding: 10px 0; /* Zmniejszamy padding boczny, aby tło sięgało krawędzi */
+            margin-left: auto; /* Centrujemy, przesuwając poza standardowy kontener */
+            margin-right: auto;
+            padding: 10px; /* Zmniejszamy padding boczny, aby tło sięgało krawędzi */
         }
 
         .harmonogram-chart-wrapper {
-            width: 90vw; /* Rozciągamy na pełną szerokość viewportu */
-            margin-left: calc(-50vw + 50%);
-            margin-right: calc(-50vw + 50%);
-            padding: 15px 0; /* Zmniejszamy padding boczny */
+            width: 90%; /* Rozciągamy na pełną szerokość viewportu */
+            margin-left: auto;
+            margin-right: auto;
+            padding: 15px; /* Zmniejszamy padding boczny */
         }
     }
 </style>
