--- a/index.html
+++ b/index.html
@@ -1209,13 +1209,14 @@
         }
     
         .logo img { /* Jeśli logo to obrazek */
+            text-align: left;
             display: block;
             margin: 0; /* Bez marginesów automatycznych */
         }
     
         /* 3. Zmniejszenie tekstu pod tabelką harmonogramu */
         .harmonogram-info {
-            font-size: 0.8em; /* Mniejszy tekst, np. z 1em na 0.8em */
+            font-size: 0.6em; /* Mniejszy tekst, np. z 1em na 0.8em */
             line-height: 1.2; /* Lepsza czytelność */
         }
     }
