--- a/index.html
+++ b/index.html
@@ -1137,11 +1137,10 @@
         }
         .summary-footer {
             display: flex;
-            flex-direction: row;
-            justify-content: center;
-            align-items: center;
-            gap: 10px;
-            flex-wrap: wrap;
+            flex-direction: column; /* Zmiana na pionowy układ */
+            justify-content: center; /* Wyśrodkowanie w pionie */
+            align-items: center; /* Wyśrodkowanie w poziomie */
+            gap: 10px; /* Odstęp między paskami */
         }
         .summary-footer .highlight {
             font-size: 0.7em;
