--- a/index.html
+++ b/index.html
@@ -1139,7 +1139,7 @@
             display: flex;
             flex-direction: column; /* Pionowy układ */
             justify-content: center; /* Wyśrodkowanie w pionie */
-            align-items: flex-start; /* Wyrównanie do lewej zamiast środka */
+            align-items: center; /* Wyrównanie do lewej zamiast środka */
             gap: 10px; /* Odstęp między paskami */
         }
         .summary-footer .highlight {
@@ -1147,6 +1147,8 @@
             padding: 3px 5px;
             max-width: 180px;
             text-align: left; /* Tekst w paskach też wyrównany do lewej */
+            justify-content: center; /* Wyśrodkowanie w pionie */
+            align-items: center;
         }
         .harmonogram-container {
             width: 95vw;
