--- a/index.html
+++ b/index.html
@@ -1119,7 +1119,7 @@
         .form-select {
             font-size: 0.9em;
             height: 28px;
-            width: 180px; /* Zaktualizowana szerokość */
+            width: 170px; /* Zaktualizowana szerokość (było 180px) */
             padding: 4px 8px;
             line-height: 20px;
         }
@@ -1127,7 +1127,7 @@
         .input-group-text {
             font-size: 0.9em;
             height: 28px;
-            width: 70px; /* Zaktualizowana szerokość */
+            width: 80px; /* Zaktualizowana szerokość (było 70px) */
             padding: 4px 8px;
             line-height: 20px;
             text-align: center;
@@ -1182,7 +1182,7 @@
         }
     
         .variable-input-group .form-control {
-            width: 180px; /* Zaktualizowana szerokość */
+            width: 170px; /* Zaktualizowana szerokość (było 180px) */
             height: 28px;
             font-size: 0.9em;
             padding: 4px 8px;
@@ -1190,7 +1190,7 @@
         }
     
         .variable-input-group .input-group-text {
-            width: 80px; /* Zaktualizowana szerokość */
+            width: 80px; /* Zaktualizowana szerokość (było 70px) */
             height: 28px;
             font-size: 0.9em;
             padding: 4px 8px;
@@ -1222,7 +1222,7 @@
         .btn-primary,
         #addVariableBtn {
             display: block;
-            width: 150px;
+            width: 180px; /* Zaktualizowana szerokość (było 150px) */
             margin: 20px auto;
             padding: 6px 15px;
         }
