--- a/index.html
+++ b/index.html
@@ -739,8 +739,8 @@
         font-weight: 500;
         text-align: center;
         background-color: var(--highlight-bg);
-        color: var(--highlight-text);
-        font-size: clamp(0.9em, 1.5vw, 1.2em);
+        color: #fff; /* Biały kolor */
+        font-size: clamp(0.65em, 1.2vw, 0.95em); /* Mniejsza czcionka */
     }
     
     .highlight.yellow {
