--- a/index.html
+++ b/index.html
@@ -740,7 +740,7 @@
         text-align: center;
         background-color: var(--highlight-bg);
         color: #fff; /* Biały kolor */
-        font-size: clamp(0.65em, 1.2vw, 0.95em); /* Mniejsza czcionka */
+        font-size: clamp(0.65em, 1.2vw, 0.95em);
     }
     
     .highlight.yellow {
