--- a/index.html
+++ b/index.html
@@ -739,8 +739,8 @@
         font-weight: 500;
         text-align: center;
         background-color: var(--highlight-bg);
-        color: #fff; /* Biały kolor */
-        font-size: clamp(0.65em, 1.2vw, 0.95em);
+        color: #fff;
+        font-size: clamp(0.525em, 1.05vw, 0.825em);
     }
     
     .highlight.yellow {
