--- a/index.html
+++ b/index.html
@@ -1041,7 +1041,7 @@
         background-repeat: no-repeat;
         background-color: transparent; /* Zachowaj przezroczystość tła dla flagi */
         transition: transform 0.2s ease, box-shadow 0.2s ease;
-        border: 2px solid #d0d0d0; /* Zwiększ grubość obramowania */
+        border: 2px solid #f5f5f5; /* Zwiększ grubość obramowania */
         border-radius: 50%; /* Upewnij się, że przycisk jest okrągły */
     }
 
